--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
+      
     }
   },
   "include": ["src"],
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
